--- a/NotificadoR/NotificadoR.Angular/packages.config
+++ b/NotificadoR/NotificadoR.Angular/packages.config
@@ -8,7 +8,16 @@
   <package id="FontAwesome" version="4.1.0" targetFramework="net45" />
   <package id="HotTowel.Angular" version="2.3.3" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.0.1" targetFramework="net45" />
   <package id="Moment.js" version="2.6.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Spin.js" version="2.0" targetFramework="net45" />
   <package id="toastr" version="2.0.3" targetFramework="net45" />
 </packages>
