--- a/NotificadoR/NotificadoR.Angular/NotificadoR.Angular.csproj
+++ b/NotificadoR/NotificadoR.Angular/NotificadoR.Angular.csproj
@@ -150,6 +150,8 @@
     <Content Include="Scripts\angular-route.min.js.map" />
     <Content Include="Scripts\angular-animate.min.js.map" />
     <Content Include="Scripts\angular-sanitize.min.js.map" />
+    <None Include="Properties\PublishProfiles\NotificadorAngular - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\NotificadorAngular - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\angular-mocks.js" />
     <Content Include="Scripts\bootstrap.js" />
